RESOLVED FIXED196310
Silence lot of warnings when compiling with clang
https://bugs.webkit.org/show_bug.cgi?id=196310
Summary Silence lot of warnings when compiling with clang
Víctor M. Jáquez L.
Reported 2019-03-27 12:38:51 PDT
When compiling with Clang a lot of warnings raise up, most of them realted with WebKitGTK code.
Attachments
Patch (8.51 KB, patch)
2019-03-27 12:55 PDT, Víctor M. Jáquez L.
no flags
Víctor M. Jáquez L.
Comment 1 2019-03-27 12:55:24 PDT
EWS
Comment 2 2019-03-28 04:59:30 PDT
Comment on attachment 366095 [details] Patch Rejecting attachment 366095 [details] from commit-queue. vjaquez@igalia.com does not have committer permissions according to https://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Commit Bot
Comment 3 2019-03-28 07:18:44 PDT
Comment on attachment 366095 [details] Patch Clearing flags on attachment: 366095 Committed r243603: <https://trac.webkit.org/changeset/243603>
WebKit Commit Bot
Comment 4 2019-03-28 07:18:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.