Silence lot of warnings when compiling with clang https://bugs.webkit.org/show_bug.cgi?id=196310

Patch by Víctor Manuel Jáquez Leal <vjaquez@igalia.com> on 2019-03-28
Reviewed by Michael Catanzaro.

Source/JavaScriptCore:

Initialize variable with default constructor.

* API/glib/JSCOptions.cpp:
(jsc_options_foreach):

Source/WebCore:

No change in behavior.

* accessibility/AccessibilityObject.h: add missing override
clause.
* platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
(webKitWebSrcChangeState): add missing format string to log.
* platform/graphics/texmap/TextureMapperPlatformLayerBuffer.h: add
missing virtual destructor.
* platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.h:
add missing override clause and remove unused private member.

Source/WebKit:

* UIProcess/API/glib/WebKitInjectedBundleClient.cpp: add missing
override clause.
* WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.h: add
missing override clause.

Canonical link: https://commits.webkit.org/210623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243603 268f45cc-cd09-0410-ab3c-d52691b4dbfc