Source/WebCore/platform/graphics/texmap/TextureMapperPlatformLayerBuffer.h
@@ -68,6 +68,7 @@ public:
     class HolePunchClient {
     public:
         virtual void setVideoRectangle(const IntRect&) = 0;
+        virtual ~HolePunchClient() = 0;
     };
 
     void setHolePunchClient(std::unique_ptr<HolePunchClient>&& client) { m_holePunchClient = WTFMove(client); }
